@@ -1,5 +1,15 @@
+umwelding-0.1.4.8
+- 支持曲线参数修改
+bug report
+- 多次点击模拟键出现bug，错误指向scene->clear函数
+
+
 umwelding-0.1.4.7
 - 支持显示曲线参数特殊点，移动特殊点以改变曲线参数
+
+umwelding-0.1.4.6
+- 发送失败时设置红色提示
+
 umwelding-0.1.4.5
 - 支持分组信息保存、加载、串行化
 - 支持图像信息加载、保存、串行化
